# dcl-unity-vlc-player

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
include/DCLVLCPlayer/: DCLVLCPlayerWrapper.h  IVLCPlayer.h  VLCPlayer.h  VLCPlayerMock.h
src/: DCLVLCPlayerWrapper.cpp  VLCPlayer.cpp
test/: main.cpp
